Fix Workboard task spacing
Summary: Restricts the padding change to homepage only. Derped this.

Test Plan: View Homepage, View Workboard. Proper layouts ensue.

Reviewers: epriestley, btrahan

Reviewed By: btrahan

Subscribers: Korvin, epriestley

Differential Revision: https://secure.phabricator.com/D11534

--- a/webroot/rsrc/css/phui/phui-object-item-list-view.css
+++ b/webroot/rsrc/css/phui/phui-object-item-list-view.css
@@ -24,7 +24,7 @@ ul.phui-object-item-list-view {
   padding: 4px;
 }
 
-.phui-object-item-list-view.phui-object-list-flush .phui-object-item {
+.homepage-panel .phui-object-list-flush .phui-object-item {
   margin: 0;
 }
 
